Cleanup some styles and cdn url

--- a/app/views/partials/theme/simple/admin/index.liquid
+++ b/app/views/partials/theme/simple/admin/index.liquid
@@ -1,4 +1,4 @@
-<section class="text-gray-700 body-font">
+<section>
   <div class="container flex flex-wrap mx-auto mt-6">
     <div class="flex flex-wrap w-full">
       <div class="lg:w-1/2 md:w-full">
