--- a/app/views/partials/theme/simple/categories/index.liquid
+++ b/app/views/partials/theme/simple/categories/index.liquid
@@ -2,7 +2,7 @@
   {{ "categories." | append: category | t }} Category
 </h1>
 
-<section class="text-gray-700 body-font">
+<section class=" ">
   <div class="container mx-auto">
     <div class="flex flex-wrap -mx-4 cards">
       {% if items.results.size > 0 %}
