--- a/app/views/partials/theme/simple/dashboard/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/index.liquid
@@ -1,4 +1,4 @@
-<section class="text-gray-700 body-font">
+<section class=" ">
   <div class="container flex flex-wrap py-8 mx-auto">
     <div class="flex flex-wrap w-full -m-4">
       <div class="p-4 lg:w-1/2 md:w-full">
