--- a/app/views/partials/theme/simple/dashboard/items/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/items/index.liquid
@@ -4,7 +4,7 @@
   / {{ 'app.items.list' | t }}
 </h1>
 
-<section class="text-gray-700 body-font">
+<section class=" ">
   <div class="container mx-auto">
     <div class="flex flex-wrap md:-mx-4 cards">
       {% if items.results.size > 0 %}
