--- a/app/views/partials/theme/simple/items/form.liquid
+++ b/app/views/partials/theme/simple/items/form.liquid
@@ -8,7 +8,7 @@
   assign item_uuid = item.uuid | default: uuid
 %}
 
-<section class="text-gray-700 body-font">
+<section class=" ">
   <div class="container flex flex-wrap items-center mx-auto">
     <form action="/items/{{ path }}" method="post" class="w-full p-8 bg-gray-200 rounded-lg shadow-md md:w-1/2">
       {% include 'authenticity_token' %}
