--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -2,7 +2,7 @@
   {% include 'theme/simple/items/metatags', item: item %}
 {% endcontent_for %}
 
-<section class="overflow-hidden text-gray-700 body-font">
+<section class="overflow-hidden  ">
   <div class="container">
     <div class="flex flex-wrap">
       <div class="w-full md:w-1/2">
@@ -27,7 +27,7 @@
       </div>
 
       <div class="w-full mt-6 lg:w-1/2 lg:pl-10 lg:py-6 lg:mt-0">
-        <h2 class="text-sm tracking-widest text-gray-700 ">
+        <h2 class="text-sm tracking-widest  ">
           {% include 'theme/simple/business_card', user: item.owner.email %}
         </h2>
 
