--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -1,4 +1,4 @@
-<header class="text-gray-700 body-font">
+<header class=" ">
   <div class="container flex flex-col flex-wrap items-center py-5 mx-auto md:flex-row">
     <a class="flex items-center mb-4 font-medium text-gray-900 md:mb-0" href="/">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round"
