--- a/app/views/partials/theme/simple/users/new.liquid
+++ b/app/views/partials/theme/simple/users/new.liquid
@@ -1,4 +1,4 @@
-<section class="text-gray-700 body-font">
+<section class=" ">
   <div class="container items-centermx-auto">
     <div class="mx-auto mb-2 text-center lg:w-2/6 md:w-1/2">
       <h1 class="text-3xl font-medium">Create an Account</h1>
