--- a/app/views/partials/theme/simple/items/index.liquid
+++ b/app/views/partials/theme/simple/items/index.liquid
@@ -1,4 +1,4 @@
-<section class="text-gray-700 body-font">
+<section class=" ">
   <div class="container mx-auto">
     <div class="flex flex-wrap -mx-4 cards">
       {% if items.results.size > 0 %}
