--- a/app/views/partials/theme/simple/payments/credit_cards/index.liquid
+++ b/app/views/partials/theme/simple/payments/credit_cards/index.liquid
@@ -19,10 +19,10 @@
 
             <div>
               <h3 class="font-bold">
-                {{ credit_card.properties.brand }} <span class="font-mono text-gray-700 text-sm">...{{ credit_card.properties.last4 }}</span>
+                {{ credit_card.properties.brand }} <span class="font-mono  text-sm">...{{ credit_card.properties.last4 }}</span>
               </h3>
 
-              <div class="text-sm text-gray-700">
+              <div class="text-sm ">
                 Expires: {{ credit_card.properties.exp_month }}/{{ credit_card.properties.exp_year }}
               </div>
             </div>
