Improve stripe onboarding

--- a/app/views/partials/test/run.liquid
+++ b/app/views/partials/test/run.liquid
@@ -1,4 +1,5 @@
-<h2 class="text-xl">test results</h2>
+<h2 class="text-xl">Test results</h2>
+
 {% liquid
   graphql tests = 'tests', path: context.params.name | dig: "admin_liquid_partials" | dig: "results"
 
