--- a/app/views/partials/theme/simple/payments/account/success.liquid
+++ b/app/views/partials/theme/simple/payments/account/success.liquid
@@ -1,6 +1,7 @@
-<div class="border rounded bg-gs-soft-grey px-8 py-6 mb-4" data-test="information">
-  <p class="text-gs-red w-100" role="alert">
-  Thank you for adding payout account.
+<div class="p-4 mb-4 bg-gray-200 border rounded" data-test="information">
+  <p>
+    Your payout accound has been added.
   </p>
 </div>
-<a class="btn btn-green" href="/payments/account">Back</a>
+
+<a class="button" href="/payments/account">Continue</a>
