--- a/app/views/partials/theme/simple/admin/categories.liquid
+++ b/app/views/partials/theme/simple/admin/categories.liquid
@@ -1,4 +1,4 @@
-<h2 class="mb-6 text-3xl font-medium">{% echo 'app.categories.list' | t %}</h2>
+<h2 class="mb-6 text-2xl">{% echo 'app.categories.list' | t %}</h2>
 <table class="table-auto w-full">
   {% for category in list %}
     <tr>
