--- a/app/views/partials/theme/simple/marketplace_setup/index.liquid
+++ b/app/views/partials/theme/simple/marketplace_setup/index.liquid
@@ -1,7 +1,7 @@
 <section class="">
   <div class="container items-center mx-auto">
     <div class="mx-auto mb-2 text-center lg:w-4/6 md:w-3/4">
-      <h1 class="text-3xl font-medium">Setup your marketplace</h1>
+      <h1 class="text-2xl">Setup your marketplace</h1>
       <p>
         Please visit <a href="https://stripe.com" target="_blank" rel="extrnal noopener">https://stripe.com</a>
         and register your connect account.
