--- a/app/views/partials/theme/simple/dashboard/items/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/items/index.liquid
@@ -1,23 +1,22 @@
-<h1 class="mb-6 text-3xl font-medium">
+<h1 class="mb-6 text-2xl">
   <a href="/dashboard">{{ 'app.dashboard' | t }}</a>
   / {{ 'app.' | append: role | t }}
   / {{ 'app.items.list' | t }}
 </h1>
 
-<section class=" ">
+{% if items.results.size > 0 %}
   <div class="container mx-auto">
     <div class="flex flex-wrap md:-mx-4 cards">
-      {% if items.results.size > 0 %}
       {% for item in items.results %}
         {% include 'theme/simple/items/card', item: item %}
       {% endfor %}
-      {% else %}
-        <p class="container my-8 text-lg text-center">
-          <a href="/items/new" class="p-2 border-2 rounded">
-            {{ 'app.dashboard-items.list-your-first-item' | t }}
-          </a>
-        </p>
-      {% endif %}
     </div>
   </div>
-</section>
+{% else %}
+  <p>You don't have any items yet.</p>
+  <div class="flex mt-4">
+    <a href="/items/new" class="w-auto flex-0 button">
+      {{ 'app.dashboard-items.list-your-first-item' | t }}
+    </a>
+  </div>
+{% endif %}
