--- a/app/views/pages/items/edit.liquid
+++ b/app/views/pages/items/edit.liquid
@@ -4,8 +4,8 @@
   include 'lib/queries/categories'
   include 'lib/queries/items/find', id: context.params.id
 
+  include 'lib/can_edit', user_id: context.current_user.id, item: context.exports.item
   include 'lib/queries/presigned_url'
-
   if context.exports.item
     include 'theme/simple/items/edit', item: context.exports.item, lib: context.exports.lib
   else
