--- a/app/views/partials/lib/can_edit.liquid
+++ b/app/views/partials/lib/can_edit.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  unless user_id == item.id
-    include 'redirect_to', url: '/', error: 'app.errors.denied', redirect_to '/'
+  unless user_id == item.owner.id
+    include 'redirect_to', url: '/', error: 'app.errors.denied'
   endunless
 %}
