--- a/app/views/pages/items/update.liquid
+++ b/app/views/pages/items/update.liquid
@@ -5,6 +5,7 @@ method: post
   include 'lib/must_be_authenticated'
 
   include 'lib/queries/items/find', id: context.params.item.id
+  include 'lib/can_edit', user_id: context.current_user.id, item: context.exports.item
 
   include 'lib/commands/items/update/build', object: context.params.item
   include 'lib/commands/items/update/check', object: context.exports.object
