--- a/app/views/partials/theme/simple/payments/account/new.liquid
+++ b/app/views/partials/theme/simple/payments/account/new.liquid
@@ -1,1 +1,3 @@
+<h2 class="text-2xl">Seller Account Information</h2>
+
 To start selling please <a href="{{ connect_url }}" target="_blank">Connect with Stripe</a>.
