--- a/app/views/partials/theme/simple/payments/account/new.liquid
+++ b/app/views/partials/theme/simple/payments/account/new.liquid
@@ -1,3 +1,9 @@
-<h2 class="text-2xl">Seller Account Information</h2>
+<h2 class="text-2xl">
+  {{ 'app.payments.account.show.account_information' | t }}
+</h2>
 
-To start selling please <a href="{{ connect_url }}" target="_blank">Connect with Stripe</a>.
+{{ 'app.payments.account.new.start_selling_please' | t }}
+To start selling please
+<a href="{{ connect_url }}" target="_blank">
+  {{ 'app.payments.account.new.connect_with_stripe' | t }}
+</a>.
