--- a/modules/stripe/public/views/partials/lib/stripe_webhook/create/call.liquid
+++ b/modules/stripe/public/views/partials/lib/stripe_webhook/create/call.liquid
@@ -1,7 +1,7 @@
 {% parse_json data %}
   {
     "url": "https://{{ context.location.host }}{{path}}",
-    "connect": "true",
+    "connect": "{{connect}}",
     "enabled_events": {
        "0": "{{event}}"
     }
