--- a/modules/stripe/public/views/partials/lib/webhooks/account_updated/call.liquid
+++ b/modules/stripe/public/views/partials/lib/webhooks/account_updated/call.liquid
@@ -1,8 +1,9 @@
 {% liquid
-  include 'modules/stripe/lib/webhooks/account_updated/build'
-  log context.exports.object, type: 'webhooks/account_updated'
-  include 'modules/stripe/lib/webhooks/account_updated/validate', object: context.exports.object
-  if context.exports.object.valid
-    include 'modules/stripe/lib/account/update/call', object: context.exports.object
+  function_rc object = 'modules/stripe/lib/webhooks/account_updated/build', post_params
+  function_rc object = 'modules/stripe/lib/webhooks/account_updated/validate', object: object
+  if object.valid
+    function_rc object = 'modules/stripe/lib/account/update/call', object: object
   endif
+
+  return_rc object
 %}
