--- a/app/views/pages/foo.liquid
+++ b/app/views/pages/foo.liquid
@@ -1,4 +1,6 @@
 {% liquid
-    include 'modules/stripe/lib/webhook_endpoints/create/call', event: 'account.updated', path: '/webhooks/account_updated'
-    include 'modules/stripe/lib/webhook_endpoints/create/call', event: 'checkout.session.completed', path: '/webhooks/checkout_session_completed'
+  comment
+    include 'modules/stripe/lib/webhook_endpoints/create/call', event: 'account.updated', path: '/webhooks/account_updated', connect: true
+  endcomment
+  include 'modules/stripe/lib/webhook_endpoints/create/call', event: 'checkout.session.completed', path: '/webhooks/checkout_session_completed', connect: false
 %}
