--- a/app/views/partials/lib/commands/orders/checkout_session/create/build.liquid
+++ b/app/views/partials/lib/commands/orders/checkout_session/create/build.liquid
@@ -1,6 +1,12 @@
 {% liquid
+  assign stripe_fee_percent = 0.029
+  assign stripe_fixed_fee = 30
   assign mpo_fee_percent = context.constants.mpo_fee_percent | divided_by: 100.0
-  assign application_fee = order.total | times: mpo_fee_percent | ceil
+
+  assign mpo_fee = order.total | times: mpo_fee_percent | ceil
+  assign stripe_fee = order.total | times: stripe_fee_percent | plus: stripe_fixed_fee | ceil
+
+  assign application_fee = mpo_fee | plus: stripe_fee
 %}
 
 {% parse_json data %}
@@ -11,7 +17,7 @@
       {
         "price_data": {
           "product_data": { "name": "{{line.name}}" },
-          "unit_amount": {{ line.price | times: 100 }},
+          "unit_amount": {{ line.price }},
           "currency": "usd"
         },
         "quantity": 1
