--- a/modules/stripe/public/views/pages/webhooks/account_updated.liquid
+++ b/modules/stripe/public/views/pages/webhooks/account_updated.liquid
@@ -4,11 +4,17 @@ method: post
 layout_name: ''
 ---
 {% liquid
-  include 'modules/stripe/lib/webhooks/account_updated/call'
-  if context.exports.object.valid
-    echo context.exports.object
+  function_rc valid_webhook = 'modules/stripe/lib/webhooks/must_be_valid_webhook', webhook_path: '/webhooks/account_updated'
+  unless valid_webhook
+    response_status 403
+    break
+  endunless
+
+  function_rc object = 'modules/stripe/lib/webhooks/account_updated/call', post_params: context.post_params
+  if object.valid
+    echo object
   else
     response_status 403
-    echo context.exports.object
+    echo object
   endif
 %}
