--- a/modules/stripe/public/views/partials/lib/account/update/validate.liquid
+++ b/modules/stripe/public/views/partials/lib/account/update/validate.liquid
@@ -1,21 +1,21 @@
 {% liquid
   assign c = '{ "errors": {}, "valid": true }' | parse_json
 
-  assign object = object | add_hash_key: 'state', 'pending'
-  if object.raw_data.payouts_enabled == true and object.raw_data.charges_enabled == true
-    assign object = object | add_hash_key: 'state', 'verified'
+  if object.id == blank
+    include 'lib/register_error', contract: c, field_name: 'id', key: 'test.should.not.be_empty'
   endif
 
-  if object.id == blank
-    include 'lib/register_error', contract: c, field_name: 'id', key: 'app.errors.not.be_empty'
+  hash_assign object['state'] ='pending'
+  if object.raw_data.payouts_enabled == true and object.raw_data.charges_enabled == true
+    hash_assign object['state'] ='verified'
   endif
 
   if object.state == blank
-    include 'lib/register_error', contract: c, field_name: 'state', key: 'app.errors.not.be_empty'
+    include 'lib/register_error', contract: c, field_name: 'state', key: 'test.should.not.be_empty'
   endif
 
-  assign object = object | add_hash_key: 'valid', c.valid
-  assign object = object | add_hash_key: 'errors', c.errors
+  hash_assign object['valid'] = c.valid
+  hash_assign object['errors'] = c.errors
 
-  export object
+  return_rc object
 %}
