--- a/modules/stripe/public/views/partials/lib/checkout_session/create/execute.liquid
+++ b/modules/stripe/public/views/partials/lib/checkout_session/create/execute.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  graphql r = 'modules/stripe/account_create', args: object
+  graphql r = 'modules/stripe/checkout_session_create', args: object
 
   if r.errors
     log r.errors, type: 'errors.graphql.invalid'
@@ -11,5 +11,5 @@
   endif
   log result type: 'stripe/account/create/execute'
 
-  export object
+  return_rc object
 %}
