--- a/modules/stripe/public/views/partials/lib/webhooks/checkout_session_completed/build.liquid
+++ b/modules/stripe/public/views/partials/lib/webhooks/checkout_session_completed/build.liquid
@@ -1,7 +1,6 @@
-{% parse_json object %}
-  {
-    "stripe_signature": {{ context.headers.HTTP_STRIPE_SIGNATURE | split: "," }},
-    "post_params": {{ context.post_params }}
-  }
-{% endparse_json %}
-{% return_rc object %}
+{% liquid
+  assign webhook_data = post_params | parse_json
+  assign empty_object = '{}' | parse_json
+  assign object = webhook_data.data.object | default: empty_object
+  return_rc object
+%}
