--- a/modules/stripe/public/views/partials/lib/webhooks/checkout_session_completed/call.liquid
+++ b/modules/stripe/public/views/partials/lib/webhooks/checkout_session_completed/call.liquid
@@ -1,7 +1,9 @@
 {% liquid
-  function_rc object = 'modules/stripe/lib/webhooks/checkout_session_completed/build'
+  function_rc object = 'modules/stripe/lib/webhooks/checkout_session_completed/build', post_params: post_params
   function_rc object = 'modules/stripe/lib/webhooks/checkout_session_completed/validate', object: object
   if object.valid
-    echo object
+    function_rc object = 'modules/stripe/lib/checkout_session/create/call', object: object
   endif
+
+  return_rc object
 %}
