Improve formatting a little bit

--- a/app/views/partials/theme/simple/marketplace_setup/index.liquid
+++ b/app/views/partials/theme/simple/marketplace_setup/index.liquid
@@ -3,7 +3,7 @@
     <h1 class="text-2xl">Global Stripe Configuration</h1>
     <p>
       Please visit <a href="https://stripe.com" target="_blank" rel="extrnal noopener">https://stripe.com</a>
-      and register your connect account.
+      and register your <span class="font-semibold">Stripe Connect</span> account.
       <br>
       This will also create webhooks to your marketplace
     </p>
@@ -15,8 +15,8 @@
 
       {% assign keys = 'mpo_fee_percent,stripe_pk_key,stripe_sk_key,stripe_client_id' | split: ',' %}
       {% for key in keys %}
-        <label class="block mt-3" for="{{ key }}">
-          <span class="block">{{ 'app.marketplace_setup.' | append: key | t }}</span>
+        <label class="block mt-4" for="{{ key }}">
+          <span class="block mb-1">{{ 'app.marketplace_setup.' | append: key | t }}</span>
           <input name="constants[{{ key }}]" type="text" id="{{ key }}" value="{{ object[key] }}" class="w-full form-input" />
           {% if object.errors[key] %}
             <span class="text-red-800">{{ object.errors[key] }}</span>
