--- a/app/views/partials/theme/simple/payments/account/new.liquid
+++ b/app/views/partials/theme/simple/payments/account/new.liquid
@@ -2,8 +2,7 @@
   {{ 'app.payments.account.show.account_information' | t }}
 </h2>
 
-{{ 'app.payments.account.new.start_selling_please' | t }}
-To start selling please
+{{ 'app.payments.account.new.to_start_selling' | t }}
 <a href="{{ connect_url }}" target="_blank">
   {{ 'app.payments.account.new.connect_with_stripe' | t }}
 </a>.
