--- a/app/views/pages/orders/success.liquid
+++ b/app/views/pages/orders/success.liquid
@@ -1,13 +1,5 @@
 {% liquid
-  assign status = 'app.order_statuses.paid'
   assign order_id = context.params.slug3
-  comment
-    TODO: set order status via stripe webhook
-  endcomment
-  include 'lib/commands/order_statuses/create/call', order_id: order_id, current_user_id: context.current_user.id, name: status
-  if context.exports.object.valid
-    include "redirect_to", url: "/dashboard/buy/orders", notice: 'app.orders.payment_success'
-  else
-    include "redirect_to", url: "/500", error: 'app.errors.500'
-  endif
+
+  include 'theme/simple/orders/success'
 %}
