--- a/modules/stripe/public/views/partials/lib/checkout_session/create/call.liquid
+++ b/modules/stripe/public/views/partials/lib/checkout_session/create/call.liquid
@@ -2,6 +2,7 @@
   function_rc object = 'modules/stripe/lib/checkout_session/create/build', object: object
   function_rc object = 'modules/stripe/lib/checkout_session/create/validate', object: object
   if object.valid
-    include 'modules/stripe/lib/checkout_session/create/execute', object: object
+    function_rc object = 'modules/stripe/lib/checkout_session/create/save', object: object
+    include 'lib/commands/events/create', type: 'stripe_payment_completed', actor_id: context.current_user.id, object_id: object.external_id
   endif
 %}
