--- a/app/views/partials/theme/simple/items/card.liquid
+++ b/app/views/partials/theme/simple/items/card.liquid
@@ -1,17 +1,15 @@
 <div class="w-full px-0 mb-8 md:p-4 lg:w-1/3 md:w-1/2 card">
   {% function_rc item_url = 'link_to', item: item %}
 
-  <a class="relative block h-64 overflow-hidden rounded shadow-sm" href="{% print item_url %}">
+  <a class="relative block h-64 overflow-hidden rounded shadow-sm" href="{{ item_url }}">
     {% assign dummy_url = 'https://dummyimage.com/800x4:3/eee/000&text=' | append: item.name %}
-    {% assign cover_url = item.photos.last.photo.url | default: dummy_url %}
+    {% assign cover_url = item.photos | last | dig: 'photo', 'versions', 'small' | default: dummy_url %}
     <img alt="{{ item.name }}" class="block object-cover object-center w-full h-full" src="{{ cover_url }}">
   </a>
 
   <div class="mt-4">
     <h2 class="text-lg font-medium text-gray-900 ">
-      <a href="{% print item_url %}">
-        {{ item.name }}
-      </a>
+      <a href="{{ item_url }}">{{ item.name }}</a>
     </h2>
 
     <h3 class="mb-1 text-xs ">
