--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -9,7 +9,7 @@
         <div class="relative glider-contain">
           <div class="overflow-x-hidden glider" glider>
             {% for p in item.photos reversed %}
-              <div><img alt="{{ item.name }}" src="{{ p.photo.versions.uncropped }}" class="object-cover w-full" loading="lazy"></div>
+              <div><img alt="{{ item.name }}" src="{{ p.photo.versions.uncropped }}" class="object-cover w-full"></div>
             {% endfor %}
           </div>
 
